# powermake

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  TODO.md  documentation.md  examples.md  pyproject.toml  test.py
.github/workflows/: pipy_release.yml  pypi_release.yml  tests_macos_arm64.yml  tests_macos_x64.yml  tests_ubuntu_arm64.yml  tests_ubuntu_x64.yml  tests_windows_x64.yml  weekly_package_compile.yml
blazymake/: __init__.py  archivers.py  compilers.py  config.py  linkers.py  operation.py  search_visual_studio.py  tools.py
powermake/: __init__.py  __main__.py  __version__.py  architecture.py  archivers.py  args_parser.py  cache.py  compilers.py  config.py  display.py  exceptions.py  interactive_config.py  linkers.py  operation.py  package.py  run_another.py  search_visual_studio.py  tools.py  utils.py  version_parser.py
powermake/archivers/: README.md  __init__.py  common.py  gnu.py  msvc.py
powermake/compilers/: README.md  __init__.py  asm.py  common.py  gnu.py  msvc.py  rc.py
powermake/generation/: __init__.py  compile_commands.py  gnu_makefile.py  idea.py  powermake.py  vscode.py
powermake/linkers/: README.md  __init__.py  common.py  gnu.py  msvc.py
powermake/package/: __init__.py  git_repos.py  lib.py
powermake/shared_linkers/: README.md  __init__.py  common.py  gnu.py  msvc.py
powermake/zsh_completions/: __init__.py  _python-powermake
tests/: generate_badge.py  nocross_tests.sh  powermake_config.json  see_gcc_weverything.py  test.c  test.cpp  test.py  tests.bat  tests.sh
tests/compile_all_libs/: makefile.py  (+2 more)
tutorials/: README.md
(+39 files in other folders)
