[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powermake"
version = "1.0.0"
requires-python = ">=3.6"
authors = [
    { name="Macéo Tuloup" },
]
description = "Yet another makefile tool. This one is meant to be super fast, super easy and crossplatform while leaving full power to the user at any time."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mactul/powermake"
Issues = "https://github.com/mactul/powermake/issues"